2009-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/expm.m: Fix order of outputs from balance.

2009-03-25  Kai Habel  <kai.habel@gmx.de>

	* general/gradient.m: Fix calculation for more than two
	dimensions.  Change interpretation of vector arguments from
	spacing to coordinates.  New tests.

2009-03-25  John W. Eaton  <jwe@octave.org>

	* mkdoc: Pass full file name to gethelp.
	* gethelp.cc (main): Handle second argument.  Write comment with
	full file name to output.

2009-03-24  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: When printing, pass scalar plot_stream
	to __gnuplot_draw_figure__, and close all plot streams when done.

2009-03-24  John W. Eaton  <jwe@octave.org>

	* general/isa.m: Handle parent classes.

2009-03-23  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Check that gnuplot has internal variable
	"GPVAL_TERMINALS".
	* plot/__gnuplot_has_feature__.m: Add "variable_GPVAL_TERMINALS".

2009-03-21  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Verify the gnuplot terminal is supported.
	* plot/__gnuplot_get_var__.m: Add function to get gnuplot variables.
	* plot/print.m: Restore the behavior for option -S<num>,<num>.

2009-03-19  Jaroslav Hajek <highegg@gmail.com>

	* optimization/fsolve.m (guarded_eval): Simplify & fix missing
	semicolon.

2009-03-17  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/__fdjac__.m: Pass in fvec to save one evaluation.
	* optimization/fsolve.m: Avoid redundant reevaluation when using
	FD jacobians. Document how it can be done with user jacobians.  Make
	first iteration special and call outputfcn after it. Skip updates
	unless two successful iterations have occured.
	* optimization/__dogleg__.m: Add missing alpha in the zero-gradient
	case.
	* optimization/fsolve.m: Remove autodg (not used), simplify.

2009-03-14  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/base/var.m: a -> x.

2009-03-13  Jaroslav Hajek  <highegg@gmail.com>
