@@ -1,3 +1,8 @@
+2009-03-27  Ben Abbott <bpabbott@mac.com>
+
+	* plot/__go_draw_axes__.m: Properly position the title for 3D plots
+	when using the gnuplot (v4.3+) backend.
+
 2009-03-27  Jaroslav Hajek  <highegg@gmail.com>
 
 	* linear-algebra/expm.m: Fix order of outputs from balance.
